--- a/sitedata/awards.yml
+++ b/sitedata/awards.yml
@@ -160,8 +160,8 @@
       description: For outstanding research contributions in Artificial Intelligence, its application to electronic market places, the highly original use of AI in strategic multi-player games, and the application of AI to optimize organ exchanges
       talk:
         - session_name: Invited Talk
-          start_time: 2021-01-01 01:00:00+00:00
-          end_time: 2021-01-01 02:00:00+00:00
+          start_time: 2021-02-04 07:30:00-08:00
+          end_time: 2021-02-04 08:45:00-08:00
           link: https://virtual.2021.aaai.org/plenary_session_opening_remarks_and_speaker_by_tuomas_sandholm.html
 
 - name: 2021 AAAI/EAAI Outstanding Educator Award
