--- a/sitedata/config.yml
+++ b/sitedata/config.yml
@@ -1,7 +1,7 @@
 name: AAAI-2021
 tagline: 35th AAAI Conference on Artificial Intelligence <br> A Virtual Conference
 date: February 2 &ndash; 9, 2021
-proceedings_title: Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing
+proceedings_title: Proceedings of the 2021 Conference on Artificial Intelligence
 citation_date: February 2021
 analytics: UA-179777566-1
 site_url: https://aaai.org/Conferences/AAAI-21/
