--- a/sitedata/committee.yml
+++ b/sitedata/committee.yml
@@ -273,4 +273,4 @@ committee:
   image: static/images/committee/add_2_Victor Khaustov.JPG
   name: Victor Khaustov
   role: Volunteer Coordinator
-  pweb: none
+  pweb: https://www.researchgate.net/profile/Victor_Khaustov
