--- a/sitedata/overall_calendar.yml
+++ b/sitedata/overall_calendar.yml
@@ -298,11 +298,11 @@
   type: Sponsors/Exhibitors
   view: day
 
-- title: "<b>AAAI-21 Invited Panel: Governments Panel 1</b>"
+- title: "<b>AAAI-21 Invited Panel: Governments 1</b>"
   start: 2021-02-05 07:30:00-08:00
   end: 2021-02-05 08:45:00-08:00
-  location: plenary_sessions.html#tab-feb4
-  link: plenary_sessions.html#tab-feb4
+  location: plenary_sessions.html#tab-feb5
+  link: plenary_sessions.html#tab-feb5
   category: time
   calendarId: '---'
   type: Plenary
@@ -341,8 +341,8 @@
 - title: "<b>IAAI-21 AI in Practice Panel</b>"
   start: 2021-02-05 10:30:00-08:00
   end: 2021-02-05 11:30:00-08:00
-  location:  plenary_sessions.html#tab-feb4
-  link: plenary_sessions.html#tab-feb4
+  location:  plenary_sessions.html#tab-feb5
+  link: plenary_sessions.html#tab-feb5
   category: time
   calendarId: '---'
   type: Plenary
@@ -429,11 +429,11 @@
   type: Diversity and Inclusion
   view: week
 
-- title: "<b>AAAI-21 Invited Panel: Governments Panel 2</b>"
+- title: "<b>AAAI-21 Invited Panel: Governments 2</b>"
   start: 2021-02-05 15:30:00-08:00
   end: 2021-02-05 16:45:00-08:00
-  location: plenary_sessions.html#tab-feb4
-  link: plenary_sessions.html#tab-feb4
+  location: plenary_sessions.html#tab-feb5
+  link: plenary_sessions.html#tab-feb5
   category: time
   calendarId: '---'
   type: Plenary
@@ -479,7 +479,7 @@
   type: Sponsors/Exhibitors
   view: day
 
-- title: "<b>AAAI-21 Invited Panel: Governments Panel 3</b>"
+- title: "<b>AAAI-21 Invited Panel: Governments 3</b>"
   start: 2021-02-05 23:30:00-08:00
   end: 2021-02-06 00:45:00-08:00
   location: plenary_sessions.html#tab-feb5
