correct typo in faq.yml

--- a/sitedata/faq.yml
+++ b/sitedata/faq.yml
@@ -44,7 +44,7 @@ FAQ:
     QA:
       - Question: What parts of AAAI are live?
         #Answer: "The individual Q&A sessions for each paper, the Q&A with Invited Speakers, Keynote Presentations, Award Sessions, Business Meetings, Tutorials, Workshops, Gather.Town and Sponsors Booth are live. These live sessions occur at specific times, so make sure you look at the Calendar to see what is live right now (see [Schedule](/schedule.html) in menu)."
-        Answer: "he Plenary sessions, Poster sessions, Sponsors/Exhibitors/Job Fair, Workshops, Doctoral and Undergraduate Consortia, and Diversity Events are live. These live sessions occur at specific times, so make sure you look at the Calendar to see what is live right now (see [Schedule](/schedule.html) in menu)."
+        Answer: "The Plenary sessions, Poster sessions, Sponsors/Exhibitors/Job Fair, Workshops, Doctoral and Undergraduate Consortia, and Diversity Events are live. These live sessions occur at specific times, so make sure you look at the Calendar to see what is live right now (see [Schedule](/schedule.html) in menu)."
       - Question: How do I talk to the author of a paper?
         Answer: "Each paper is presented in a poster session in Virtual Chair on Gather.Town. You can certainly talk to the authors live during poster sessions. We also recommend that you watch the video for the paper first. We want to remind you to be respectful during these conversations and follow the [AAAI Code of Conduct](/about.html#tab-code-of-conduct). You can also reach authors via their RocketChat channel that you find on the respective paper page."
       #- Question: When I join a Zoom link for a paper, I am put into a waiting room instead of joining. What is wrong?
