--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -61,7 +61,7 @@
   level: Silver
   logo: dataminr.png
   logoontop: true
-  website: https://www.dataminr.com/
+  website: https://dataminr.com/aaai
   description: |
     We are Dataminr. We are a mission-driven company committed to the power of AI, public data, and real-time information as a force for good in the world. Over the last decade, our team has established and refined the leading AI platform for real-time event and risk detection. We surface the earliest signals of unfolding events and emerging risks within an increasingly diverse and complex landscape of publicly available information, enabling more effective risk mitigation strategies, faster response, and better crisis management.
 
