--- a/sitedata/faq.yml
+++ b/sitedata/faq.yml
@@ -28,7 +28,7 @@ FAQ:
       - Question: How can I find other people to chat with during the conference?
         Answer: "The socials are one way to interact and discuss with others.
          We will also allow participants to make channels on RocketChat.
-         You can create a channel about a topic, and post it to a general channel, so that others who are interested in discussing can join the channel.
+         You can create a channel about a topic, and post it to a [general channel](https://aaai-21.rocket.chat/channel/General), so that others who are interested in discussing can join the channel.
          You can also privately message individuals, but please be advised to be careful about harassment and follow the [Code of Conduct](/about.html#tab-code-of-conduct).
          In Virtual Chair on Gather.Town, you can talk to other conference participants, meet strangers and make friends."
       #- Question: How do I use Zoom in the browser instead of the App?
